# grip

./: .gitignore  GLOSSARY.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: _README.md
research/: ADAPTER_STRATEGY.md  CODEX_DELEGATION_PLAN.md  MECHANISM_INGREDIENTS.md  MISSION_REVIEW_FIXES_001.md  M_REGIME_AGGREGATE_RULE_G014.md  M_REGIME_AGGREGATE_SUMMARY_G015.md  M_REGIME_CALIBRATED_G013.md  M_REGIME_EVALBATCH_G022.md  M_REGIME_HELDOUT_FIX_G020.md  M_REGIME_HELDOUT_G021.md  M_REGIME_PIVOT_G008.md  M_REGIME_REVERSAL_G011.md  M_REGIME_RUNNER_G016.md  M_REGIME_SCALE_G019.md  M_REGIME_SWEEP_CLI_G018.md  M_REGIME_SWEEP_G017.md  M_REGIME_TRAINED_G010.md  OPEN_MODEL_MECHANISMS.md  README.md  SPEC-000-derivative-probe.md  SPEC-001-tasks-and-data.md  SPEC-002-AMENDMENT-001.md  SPEC-002-eval-protocol.md  SPEC-003-AMENDMENT-001.md  SPEC-003-ablations-and-sweeps.md
src/grip/: __init__.py
src/grip/analysis/: __init__.py  bypass.py  bypass_helpers.py  bypass_probe_impl.py  (+5 more)
tests/: score_fixtures.py  test_aggregate_headroom.py  test_aggregate_summary.py  test_bypass_probe.py  test_collate.py  test_dense_model.py  test_headroom.py  test_headroom_training.py  test_m_regime_sweep.py  test_m_regime_validity.py  test_metrics.py  test_noise_floor_calibration.py  test_probe.py  test_probe_runner.py  test_probe_training.py  test_repo_hygiene.py  test_reversal_stream.py  test_score.py  test_score_compute.py  test_selection_diagnostics.py  test_smoke.py  test_sparse.py  test_streams_conformance.py  test_sweep_plan.py  test_train_run.py
(+37 files in other folders)
